- v3.2.0
  - Update to make raw2l1 compatible with python > 3.7 and numpy > 1.20
    - Add requirements files for production and development for pip and conda
    - Run tests for python 3.7 to 3.11
    - Replace use of `np.float` by `float`
  - Lufft CHM15k
    - Divide by `c_cal` for transformation from `beta_att` to `beta_raw`
  - VAISALA CT25k
    - Add reader for message of type 2

- v3.1.3
  - LEOSHERE WLS70
    - improve management of localization of intrument in header
    - default values for lat and lon are now required in conf file
  - VAISALA CL61
    - add compatibility with firmware 1.1.x
    - read HouseKeeping Data from `monitoring` group
    - add option in conf file to force localization of instrument

- v3.1.2
  - VAISALA CL
    - remove debug print in reader

- v3.1.1
  - VAISALA CL
    - make the reader compatible with CL31 from belgium

- v3.1.0
  - Update all example configuration files.
  - VAISALA CL
    - Correct bug for reading of visibility data
  - VAISALA CL61
    - Add reader. Only preliminary version as the file format will change.
  - SIGMASPACE MiniMPL
    - Correct total backscatter calculation
  - Lufft CHM15k
    - update decoding of warning error message depending on the firmware version
    - Add capacity to read backscatter from `beta_att` variables

- v3.0.5
  - VAISALA CL
    - remove unneeded debugging print
  - LEOSPHERE WLS70 10s
    - wiper count variable is not read the right way

- v3.0.4
  - VAISALA CL
    - correct bug when message line start with `/` (ligne was ignored)
    - try to improve handling of incomplete message

- v3.0.3
  - update requirements.txt with more precise packages version
  - VAISALA CL
    - improve handling of incomplete messages. The reader won't crash now and skip the message.

- v3.0.2
  - hatpro reader
    - improve syncing of brightness and meteo data
  - WLS70 10 min reader
    - correct bug when localization is not well formatted

- v3.0.1