@@ -114,7 +114,7 @@ value = $reader_data$, cbh
 
 [cloud_cover]
 dim = time
-type = $int$
+type = $integer$
 long_name = cloud cover
 units = okta
 missing_value = -9
@@ -123,7 +123,7 @@ value = $reader_data$, cloud_cover
 
 [cloud_cover_layer]
 dim = time, layer
-type = $int$
+type = $integer$
 long_name = cloud cover layer
 units = okta
 missing_value = -9
@@ -310,10 +310,10 @@ value = $reader_data$, pres_int
 
 [vertical_visibility]
 dim = time
-type = $integer$
+type = $float$
 long_name = vertical visibility
 units = m
-missing_value = -9
-_FillValue = -9
+missing_value = -999.9
+_FillValue = -999.9
 value = $reader_data$, vertical_visibility
 
