@@ -7,6 +7,10 @@
     - Divide by `c_cal` for transformation from `beta_att` to `beta_raw`
   - VAISALA CT25k
     - Add reader for message of type 2
+  - VAISALA CL61
+    - Correct configuration example.
+      - type `$integer$` was used instead of `$int$`
+      - `vertical visibility` was cast as an integer but variable is a double in raw netCDF
 
 - v3.1.3
   - LEOSHERE WLS70
